[package]
name = "common"
version = "0.1.0"
edition = "2024"
[lib]
path = "src/lib.rs"

[dependencies]
tracing-subscriber = { workspace = true, features = ["chrono", "env-filter"] }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }