[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
bincode = { workspace = true, features = ["serde", "derive"] }
tracing = { workspace = true, features = ["log", "async-await"] }
xid = { workspace = true }
