[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
ppaass-common = { path = "../common", package = "common" }
config = { workspace = true, features = ["toml"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
tracing-appender = { workspace = true }
tokio = { workspace = true, features = ["full"] }